# FL-Enterprise

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  render-api-only.yaml  render.yaml  requirements-lock.txt  requirements.txt
alembic/: env.py
deploy/: Caddyfile
docs/: MERCADOPAGO_PRODUCTION_CHECKLIST.md  MERCADOPAGO_SETUP.md  MP_WEBHOOK_TUNNEL_ATUAL.md
motopay/: __init__.py
motopay_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: backup_postgres.sh  dev_up.ps1  dev_up.sh  docker_compose_up.ps1  docker_compose_up.sh  generate_pwa_icons.py  get_lan_ip.py  healthcheck_bot.py  mp_config_check.py  mp_webhook_tunnel.py  seed_admin.py  seed_demo.py  smoke_checklist.py  start.sh  stress_celery.py  sync_env_mp.py  sync_mp_operacao_from_env.py  validate_mp_sandbox.py
tests/: conftest.py  test_auth.py  test_automation_rules.py  test_billing_webhook_flow.py  test_card_payment_service.py  test_celery_observability.py  test_contrato_documento.py  test_list_filters.py  test_mercadopago_card_client.py  test_mercadopago_client.py  test_mercadopago_credentials.py  test_mercadopago_operacao_credentials.py  test_mercadopago_sdk_factory.py  test_mercadopago_webhook.py  test_mercadopago_webhook_multi.py  test_metrics_middleware.py  test_motos_imagem.py  test_motos_km.py  test_mp_enterprise.py  (+26 more)
(+219 files in other folders)
