[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motopay-admin"
version = "0.1.0"
description = "MotoPay Admin — gestão de frota, cobrança e finanças"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "python-telegram-bot>=21.0",
    "streamlit>=1.33.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "python-dateutil>=2.8.2",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["motopay*"]
